compiler/src/test/resources/golden/errors/syn_const_not_screaming.dawn
const limit: Int = 10
