compiler/src/test/resources/golden/errors/syn_const_not_screaming.err
error: expected a constant name (SCREAMING_SNAKE_CASE), found `limit`
  --> syn_const_not_screaming.dawn:1:7
  |
1 | const limit: Int = 10
  |       ^^^^^
